<resources>
    <string name="app_name" translatable="false">Blacksmith Slots</string>
    <string name="app_id" translatable="false">1038590321568</string>
    <string name="empty" translatable="false" />
    <string name="icon_autospin" translatable = "false">&#xe800;</string>
    <string name="icon_rows" translatable = "false">&#xe801;</string>
    <string name="icon_quantity" translatable = "false">&#xe802;</string>
    <string name="icon_left" translatable = "false">&#xe803;</string>
    <string name="icon_right" translatable = "false">&#xe804;</string>
    <string name="icon_settings" translatable = "false">&#xe805;</string>
    <string name="icon_statistics" translatable = "false">&#xe806;</string>
    <string name="icon_volume" translatable = "false">&#xe807;</string>
    <string name="icon_mute" translatable = "false">&#xe808;</string>
    <string name="rate_dialog_title">Rate Blacksmith Slots</string>
    <string name="rate_dialog_message">If you\'re enjoying Blacksmith Slots, would you mind leaving a rating? It helps more people discover the game, and encourages future development!\n\nThanks &lt;3</string>
    <string name="rate_dialog_ok">Okay!</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_no">No >:(</string>
    <string name="alert_items_submitted">Handed in %1$s to complete task at \"%2$s\"!</string>
    <string name="alert_statistic_achieved">Achieved %1$s and completed task at %2$s!</string>
    <string name="alert_no_matches">No matches!</string>
    <string name="alert_quest_completed">Quest completed!</string>
    <string name="alert_unfinished_task">This task can\'t be completed yet!</string>
    <string name="alert_levelled_up">Reached level %1$d! %2$s</string>
    <string name="alert_levelled_up_prestige">Reached level %1$d, you can now prestige in the settings! %2$s</string>
    <string name="alert_autospin_cancelled">Autospin turned off!</string>
    <string name="alert_claimed_pass_day">Claimed day %1$d bonus of %2$s!</string>
    <string name="alert_pass_purchased">Purchased a Blacksmith Pass!</string>
    <string name="alert_pass_purchased_bonus_vip">Purchased a Blacksmith Pass, and received a free upgrade to VIP level 1!</string>
    <string name="alert_level_progress">%1$.2f%% of the way to level %2$d (%3$d / %4$d xp)!</string>
    <string name="alert_item_source">%1$s is obtained from %2$s.</string>
    <string name="alert_item_use">%1$s is used in %2$s.</string>
    <string name="alert_item_unknown">Nowhere!?</string>
    <string name="alert_map_locked">To unlock map \"%1$s\" slot \"%2$s\" must be completed!</string>
    <string name="google_cloud_comparing">Comparing local and cloud saves...</string>
    <string name="google_cloud_save_loading">Loading...</string>
    <string name="google_cloud_save_loaded">Loaded cloud save!</string>
    <string name="local_save_loaded">Successfully loaded and imported local game save!</string>
    <string name="google_cloud_save_saving">Saving...</string>
    <string name="google_cloud_save_saved">Saved cloud save!</string>
    <string name="local_save_saved">Successfully exported game save to %s on external storage!</string>
    <string name="google_cloud_save_conflict">Cloud save conflict! Attempting to resolve, this may take a few seconds.</string>
    <string name="google_cloud_save_error">An error occurred, please contact blacksmithslots@jakelee.co.uk if this happens repeatedly!</string>
    <string name="error_failed_export">An error occurred! Please check your storage is correctly connected, and permissions have been given. Error: %s.</string>
    <string name="saveNameFormat" translatable="false">BlacksmithSlots%s.save</string>
    <string name="log_spin">%1$s at \"%2$s\".</string>
    <string name="log_error">Error: %1$s</string>
    <string name="time_hours">%1$.1f hrs</string>
    <string name="time_mins">%1$d mins</string>
    <string name="notification_periodic_bonus">Your bonus is ready to claim!</string>
    <string name="settinggroup_1">Audio</string>
    <string name="settinggroup_2">Gameplay</string>
    <string name="settinggroup_3">Notifications</string>
    <string name="settinggroup_4">Google Play</string>
    <string name="settinggroup_5">Saves</string>
    <string name="settinggroup_6">More</string>
    <string name="unknown" translatable="false">\???</string>
    <string name="interstitialTimeLeft">Remaining: %1$ds</string>
    <string name="interstitialLongText">No advert could be loaded!
\n\nThis can be caused by poor internet, recently enabling adverts, or no advertisers currently advertising in your area.
\n\nIf you wait until the countdown at the top reaches 0 and turns green, closing this window will provide the advert reward.
\n\nWhilst you\'re waiting, you could <a href="https://play.google.com/store/apps/details?id=uk.co.jakelee.blacksmithslots">leave the game a rating</a>. It\'s the best way to help the game grow!
\n\nOr even check out the original game, <a href="https://play.google.com/store/apps/details?id=uk.co.jakelee.blacksmith">Pixel Blacksmith</a>. I think it\'s rather fun!</string>
    <string name="vip_level_display" translatable="false">VIP %1$d</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="inventory">Inventory</string>
    <string name="claim_bonus">Free Bonus</string>
    <string name="watch_advert">Advert Bonus</string>
    <string name="task_completion">Task %1$d/%2$d: %3$s</string>
    <string name="open_slot">Play!</string>
    <string name="vip_level">VIP Level</string>
    <string name="chest_cooldown">Free Restock</string>
    <string name="reward_boost">Free Boost</string>
    <string name="advert_cooldown">Advert Restock</string>
    <string name="daily_bonus">BS Pass Bonus</string>
    <string name="autospins">Max Auto Spins</string>
    <string name="shop">Shop</string>
    <string name="tab_pass">Blacksmith Pass</string>
    <string name="pass_purchase">Buy Pass (%1$s)</string>
    <string name="pass_claim">Claim</string>
    <string name="pass_days_left">%1$d days left</string>
    <string name="pass_desc_owned">Whilst your Blacksmith Pass is valid, you will receive free items every day!\n\nCheck back anytime between 00:00 and 23:59 to claim!</string>
    <string name="pass_desc_unowned">Purchasing a Blacksmith Pass entitles you to %1$d days of free daily goodies!\n\nYour first purchase will also upgrade you to VIP 1! Higher VIP levels earn more from a BS pass!</string>
    <string name="pass_days">Day %1$d:</string>
    <string name="tab_vip">VIP Levels</string>
    <string name="vip_compare">Compare</string>
    <string name="vip_upgrade">Upgrade</string>
    <string name="vip_upgrade_price">Upgrade for %1$s</string>
    <string name="vip_intro">Upgrade to VIP %1$d and receive:</string>
    <string name="vip_intro_max">You\'ve made it to the maximum VIP level!\n\nThere\'s no more VIP levels, but there\'s always item bundles and the Blacksmith Pass if you just can\'t get enough!</string>
    <string name="tab_bundle">Item Bundles</string>
    <string name="bundle_item_select">Item:</string>
    <string name="bundle_item_chance">Chance:</string>
    <string name="itemSourcesButton">Sources</string>
    <string name="itemUsesButton">Uses</string>
    <string name="error_advert_not_ready">Advert will be ready in %1$s.</string>
    <string name="error_bonus_not_ready">Bonus will be ready in %1$s.</string>
    <string name="error_not_enough_resources">Not enough resources to spin!</string>
    <string name="error_failed_pb_import">Failed to find a Pixel Blacksmith save! Make sure you\'ve given permission to access external storage, and try exporting the save again.</string>
    <string name="error_failed_import">Failed to find a Blacksmith Slots save! Make sure you\'ve given permission to access external storage, and that the save is in /BlacksmithSlots/. Error: %s</string>
    <string name="error_claimed_without_pass">Can\'t claim Blacksmith Pass rewards without having a Blacksmith Pass!</string>
    <string name="error_claimed_pass_already">Already claimed this day\'s reward!</string>
    <string name="language_1">English</string>
    <string name="language_2">Chinese</string>
    <string name="language_3">Dutch</string>
    <string name="language_4">French</string>
    <string name="language_5">German</string>
    <string name="language_6">Korean</string>
    <string name="language_7">Portuguese</string>
    <string name="language_8">Russian</string>
    <string name="language_9">Spanish</string>
    <string name="tier_0" translatable="false" />
    <string name="tier_1">Bronze</string>
    <string name="tier_2">Iron</string>
    <string name="tier_3">Steel</string>
    <string name="tier_4">Mithril</string>
    <string name="tier_5">Adamant</string>
    <string name="tier_6">Silver</string>
    <string name="tier_7">Gold</string>
    <string name="tier_10">Partial</string>
    <string name="tier_999" translatable="false" />
    <string name="type_1">Ore</string>
    <string name="type_2">Bar</string>
    <string name="type_3">Dagger</string>
    <string name="type_4">Sword</string>
    <string name="type_5">Longsword</string>
    <string name="type_6">Bow</string>
    <string name="type_7">Half Shield</string>
    <string name="type_8">Full Shield</string>
    <string name="type_9">Chainmail</string>
    <string name="type_10">Platebody</string>
    <string name="type_11">Half Helmet</string>
    <string name="type_12">Full Helmet</string>
    <string name="type_13">Boots</string>
    <string name="type_14">Gloves</string>
    <string name="type_15">Pickaxe</string>
    <string name="type_16">Hatchet</string>
    <string name="type_17">Fishing Rod</string>
    <string name="type_18">Hammer</string>
    <string name="type_19">Secondary</string>
    <string name="type_20">Lucky Coin</string>
    <string name="type_21">Apple</string>
    <string name="type_22">Lime</string>
    <string name="type_23">Orange</string>
    <string name="type_24">Peach</string>
    <string name="type_25">Pineapple</string>
    <string name="type_26">Banana</string>
    <string name="type_27">Cherry</string>
    <string name="type_28">Watermelon</string>
    <string name="type_29">Grapes</string>
    <string name="type_30">Steak</string>
    <string name="type_31">Potato</string>
    <string name="type_32">Egg</string>
    <string name="type_33">Fish</string>
    <string name="type_34">Forbidden Food</string>
    <string name="type_35">Yellow Gem</string>
    <string name="type_36">Orange Gem</string>
    <string name="type_37">Green Gem</string>
    <string name="type_38">Blue Gem</string>
    <string name="type_39">Red Gem</string>
    <string name="type_40">Purple Gem</string>
    <string name="type_41">Red Sand</string>
    <string name="type_42">Blue Sand</string>
    <string name="type_43">Yellow Sand</string>
    <string name="type_44">Green Sand</string>
    <string name="type_45">Red Book</string>
    <string name="type_46">Yellow Book</string>
    <string name="type_47">Green Book</string>
    <string name="hand_in">Hand in</string>
    <string name="reddit">Reddit</string>
    <string name="more_games">More Games</string>
    <string name="leave_rating">Leave Rating</string>
    <string name="extra_wildcards">Extra Wildcards</string>
    <string name="vip_comparison">VIP Comparison</string>
    <string name="upgrade_vip_level">Upgrade VIP Level</string>
    <string name="vip_comparison_info">Higher VIP levels receive more benefits, swipe right on the table below to see more! Your current level is highlighted in green.\nTap a benefit name to view more information about it.</string>
    <string name="item_trophy">Trophy:</string>
    <string name="item_boost">Boost:</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="exclamation_mark" translatable="false">!</string>
</resources>