<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.jakelee.blacksmithslots.main.VipComparisonActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="close"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:clickable="true"
        android:background="@drawable/box_yellow"
        style="@style/VerticalScrollbar"
        android:onClick="suppress">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <uk.co.jakelee.blacksmithslots.components.FontTextView
                android:id="@+id/activityTitle"
                android:layout_width="wrap_content"
                style="@style/DataText"
                android:text="@string/vip_comparison"
                android:textSize="45sp"/>
            <uk.co.jakelee.blacksmithslots.components.FontTextView
                android:id="@+id/vipDescription"
                android:layout_width="wrap_content"
                style="@style/DataText"
                android:text="@string/vip_comparison_info"
                android:textSize="19sp"
                android:maxLines="8"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:id="@+id/comparisonTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:divider="?android:attr/dividerHorizontal"
                    android:showDividers="middle">
                    <TableRow>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/vipLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxWidth="50dp"
                            android:maxLines="3"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/vip_level"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/chestRestock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="65dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/chest_cooldown"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/chestBoost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="65dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/reward_boost"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/advertRestock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="65dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/advert_cooldown"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/dailyBonus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="65dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/daily_bonus"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/maxAutospins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="70dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/autospins"/>
                        <uk.co.jakelee.blacksmithslots.components.FontTextView
                            android:id="@+id/extraWildcards"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/FontSize"
                            android:maxLines="3"
                            android:maxWidth="85dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="3dp"
                            android:text="@string/extra_wildcards"/>
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <uk.co.jakelee.blacksmithslots.components.FontTextView
                android:id="@+id/upgradeButton"
                style="@style/SlotText"
                android:layout_width="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/box_green"
                android:text="@string/upgrade_vip_level" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:onClick="close"/>

    <LinearLayout
        android:id="@+id/croutonview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="closeAlert"/>
</RelativeLayout>
